--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 SECRET_KEY=
-NAME=
-USER=
-PASSWORD=
-HOST=
-PORT=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
 TELEGRAM_TOKEN=
 TG_URL=
 CELERY_RESULT_BACKEND=
