--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,9 @@
 version: "3"
 
 services:
+  redis:
+    image: redis:latest
+    restart: on-failure
   db:
     image: postgres:16-alpine
     restart: on-failure
@@ -28,6 +31,28 @@ services:
     volumes:
       - .:/app
 
+  celery:
+    build: .
+    tty: true
+    command: celery -A config worker -l INFO
+    restart: on-failure
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+      - db
+      - app
 
+  celery-beat:
+    build: .
+    tty: true
+    command: celery -A config beat -l INFO
+    restart: on-failure
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+      - db
+      - app
 volumes:
   pg_data:
